kubernetes/apps/saas-gompha/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saas-gompha-staging
  labels:
    app.kubernetes.io/part-of: gompha
    gompha.io/env: staging
